# cpp-base

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  check-clang-format.sh
app/: CMakeLists.txt  main.cpp
cmake/: warnings.cmake
lib/: CMakeLists.txt  dummy.cpp  dummy.hpp
src/: CMakeLists.txt  dummy.cpp
support/clang-format/: CMakeLists.txt  Dockerfile  check-clang-format.py  run-clang-format.py
test/: CMakeLists.txt  main.cpp
